[package]
name = "siwe"
version = "0.4.2"
authors = ["Spruce Systems, Inc."]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust implementation of EIP-4361: Sign In With Ethereum"
repository = "https://github.com/spruceid/siwe-rs/"
exclude = ["tests", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
iri-string = "0.6"
hex = "0.4"
k256 = { version = "0.11", default-features = false, features = [
    "std",
    "ecdsa",
    "keccak256",
] }
sha3 = "0.10.2"
time = { version = "0.3", features = ["parsing", "formatting"] }
thiserror = "1.0"
http = "0.2.5"
rand = "0.8.4"
serde = { version = "1.0.140", optional = true }
ethers = { version = "0.17.0", optional = true }
typed-builder = { version = "0.10.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.21.1", features = ["rt", "macros"] }
