[package]
name = "siwe"
version = "0.6.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust implementation of EIP-4361: Sign In With Ethereum"
repository = "https://github.com/spruceid/siwe-rs/"
exclude = ["tests", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ethers = ["dep:ethers"]
serde = ["dep:serde"]
typed-builder = ["dep:typed-builder"]

[dependencies]
iri-string = "0.7"
hex = "0.4"
k256 = { version = "0.13", default-features = false, features = [
    "std",
    "ecdsa",
] }
sha3 = "0.10.8"
time = { version = "0.3", features = ["parsing", "formatting"] }
thiserror = "1.0"
http = "0.2.9"
rand = "0.8.5"
serde = { version = "1.0.164", optional = true }
ethers = { version = "2.0.7", optional = true }
typed-builder = { version = "0.14.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.28.2", features = ["rt", "macros"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
